--- a/.gitignore
+++ b/.gitignore
@@ -14,20 +14,24 @@
 
 # production
 /build
+/.dist/
+/.uploads/
 
 # misc
 .DS_Store
-*.pem
+/DS_Store
+
+# ide
+.vscode
 
 # debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-.pnpm-debug.log*
 
 # local env files
 .env
-.env*.local
-
-# vercel
-.vercel
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
