--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "devDependencies": {
     "@svgr/webpack": "5.5.0",
+    "babel-plugin-styled-components": "2.0.6",
     "eslint": "8.12.0",
     "eslint-config-next": "12.1.4",
     "eslint-config-prettier": "8.5.0",
