--- a/package.json
+++ b/package.json
@@ -25,6 +25,10 @@
   },
   "devDependencies": {
     "@svgr/webpack": "5.5.0",
+    "@types/node": "17.0.36",
+    "@types/react": "17.0.2",
+    "@types/react-dom": "17.0.2",
+    "@types/styled-components": "5.1.25",
     "babel-plugin-styled-components": "2.0.6",
     "eslint": "8.12.0",
     "eslint-config-next": "12.1.4",
@@ -36,6 +40,7 @@
     "next-compose-plugins": "2.2.1",
     "next-transpile-modules": "9.0.0",
     "prettier": "2.6.2",
-    "prop-types": "15.8.1"
+    "prop-types": "15.8.1",
+    "typescript": "^4.7.2"
   }
 }
